A bunch of roles

--- a/src/settings.json
+++ b/src/settings.json
@@ -1,25 +1,44 @@
 {
     "defaultRoleLists":[
-        [   //5
+        [],
+        [
+            [null, null, "Godfather"]
+        ],
+        [
             [null, null, "Godfather"],
-            ["Mafia", null, null],
+            [null, null, "Veteran"]
+        ],
+        [
+            [null, null, "Godfather"],
+            [null, null, "Veteran"],
+            [null, null, "Mayor"]
+        ],
+        [
+            [null, null, "Godfather"],
+            [null, null, "Veteran"],
+            [null, null, "Mayor"],
+            [null, null, "Transporter"]
+        ],
+        [
+            [null, null, "Godfather"],
+            ["Mafia", "Deception", null],
 
             ["Town", "Investigative", null],
             ["Town", null, null],
             ["Town", null, null]
         ],
-        [   //6
+        [
             [null, null, "Godfather"],
-            ["Mafia", null, null],
+            ["Mafia", "Support", null],
 
             ["Town", "Investigative", null],
             ["Town", "Protective", null],
             ["Town", null, null],
             ["Town", null, null]
         ],
-        [   //7
+        [
             [null, null, "Godfather"],
-            ["Mafia", null, null],
+            ["Mafia", "Support", null],
 
             ["Town", "Investigative", null],
             ["Town", "Protective", null],
@@ -28,9 +47,9 @@
             
             ["Neutral", "Evil", null]
         ],
-        [   //8
+        [
             [null, null, "Godfather"],
-            ["Mafia", null, null],
+            ["Mafia", "Support", null],
 
             ["Town", "Investigative", null],
             ["Town", "Protective", null],
@@ -40,7 +59,7 @@
             
             [null, null, "Witch"]
         ],
-        [   //9
+        [
             [null, null, "Godfather"],
             ["Mafia", null, null],
 
@@ -53,11 +72,42 @@
             
             ["Neutral", "Evil", null]
         ],
-        [   //10
+        [
+            [null, null, "Godfather"],
+            ["Mafia", "Support", null],
+            ["Mafia", null, null],
+
+            ["Town", "Investigative", null],
+            ["Town", "Protective", null],
+            ["Town", "Support", null],
+            ["Town", null, null],
+            ["Town", null, null],
+            ["Town", null, null],
+            
+            ["Neutral", "Evil", null]
+        ],
+        [
+            [null, null, "Godfather"],
+            ["Mafia", "Support", null],
+            ["Mafia", null, null],
+
+            ["Town", "Investigative", null],
+            ["Town", "Investigative", null],
+            ["Town", "Protective", null],
+            ["Town", "Support", null],
+            ["Town", null, null],
+            ["Town", null, null],
+            ["Town", null, null],
+
+            ["Neutral", "Evil", null]
+        ],
+        [
+            [null, null, "Godfather"],
             ["Mafia", "Killing", null],
-            ["Mafia", null, null],
-            ["Mafia", null, null],
+            ["Mafia", "Support", null],
+            ["Mafia", "Deception", null],
 
+            ["Town", "Investigative", null],
             ["Town", "Investigative", null],
             ["Town", "Protective", null],
             ["Town", "Support", null],
@@ -67,42 +117,11 @@
             
             ["Neutral", "Evil", null]
         ],
-        [   //11
+        [
+            [null, null, "Godfather"],
             ["Mafia", "Killing", null],
-            ["Mafia", null, null],
-            ["Mafia", null, null],
-
-            ["Town", "Investigative", null],
-            ["Town", "Investigative", null],
-            ["Town", "Protective", null],
-            ["Town", "Support", null],
-            ["Town", null, null],
-            ["Town", null, null],
-            ["Town", null, null],
-
-            ["Neutral", "Evil", null]
-        ],
-        [   //12
-            [null, null, "Godfather"],
-            [null, null, "Mafioso"],
-            ["Mafia", null, null],
-            ["Mafia", null, null],
-
-            ["Town", "Investigative", null],
-            ["Town", "Investigative", null],
-            ["Town", "Protective", null],
-            ["Town", "Support", null],
-            ["Town", null, null],
-            ["Town", null, null],
-            ["Town", null, null],
-            
-            ["Neutral", "Evil", null]
-        ],
-        [   //13
-            [null, null, "Godfather"],
-            [null, null, "Mafioso"],
-            ["Mafia", null, null],
-            ["Mafia", null, null],
+            ["Mafia", "Support", null],
+            ["Mafia", "Deception", null],
             
             ["Town", "Investigative", null],
             ["Town", "Investigative", null],
@@ -115,11 +134,11 @@
 
             ["Neutral", "Evil", null]
         ],
-        [   //14
+        [
             [null, null, "Godfather"],
-            [null, null, "Mafioso"],
-            ["Mafia", null, null],
-            ["Mafia", null, null],
+            ["Mafia", "Killing", null],
+            ["Mafia", "Support", null],
+            ["Mafia", "Deception", null],
             
             ["Town", "Investigative", null],
             ["Town", "Investigative", null],
@@ -133,11 +152,11 @@
             ["Neutral", "Evil", null],
             ["Neutral", "Killing", null]
         ],
-        [   //15
+        [
             [null, null, "Godfather"],
-            [null, null, "Mafioso"],
-            ["Mafia", null, null],
-            ["Mafia", null, null],
+            ["Mafia", "Killing", null],
+            ["Mafia", "Support", null],
+            ["Mafia", "Deception", null],
             
             ["Town", "Investigative", null],
             ["Town", "Investigative", null],
@@ -151,6 +170,26 @@
 
             ["Neutral", "Evil", null],
             ["Neutral", "Killing", null]
+        ],
+        [
+            [null, null, "Godfather"],
+            ["Mafia", "Killing", null],
+            ["Mafia", "Support", null],
+            ["Mafia", "Deception", null],
+            
+            ["Town", "Investigative", null],
+            ["Town", "Investigative", null],
+            ["Town", "Protective", null],
+            ["Town", "Support", null],
+            ["Town", "Killing", null],
+            ["Town", null, null],
+            ["Town", null, null],
+            ["Town", null, null],
+            ["Town", null, null],
+
+            ["Neutral", "Evil", null],
+            ["Neutral", "Killing", null],
+            ["Neutral", null, null]
         ]
     ]
 }
