--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "create-react-app": "^5.0.1",
     "pubnub": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -37,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "json": "^11.0.0"
   }
 }
