--- a/src/settings.json
+++ b/src/settings.json
@@ -1,15 +1,6 @@
 {
     "defaultPhaseTimes":{
-        "RealGame":{
-            "Night":37,
-            "Morning":15,
-            "Discussion":45,
-            "Voting":30,
-            "Testimony":20,
-            "Judgement":20,
-            "FinalWords":7
-        },
-        "LongGame":{
+        "Long":{
             "Night":90,
             "Morning":15,
             "Discussion":240,
@@ -18,7 +9,7 @@
             "Judgement":30,
             "FinalWords":10
         },
-        "ShortGame":{
+        "Short":{
             "Night":60,
             "Morning":15,
             "Discussion":120,
@@ -27,14 +18,24 @@
             "Judgement":30,
             "FinalWords":10
         },
-        "Testing":{
+        "Classic":{
+            "Night":37,
+            "Morning":15,
+            "Discussion":45,
+            "Voting":30,
+            "Testimony":20,
+            "Judgement":20,
+            "FinalWords":7
+        },
+
+        "Test":{
             "Night":10,
-            "Morning":3,
-            "Discussion":3,
+            "Morning":1,
+            "Discussion":1,
             "Voting":15,
-            "Testimony":3,
+            "Testimony":1,
             "Judgement":9,
-            "FinalWords":3
+            "FinalWords":1
         }
     },
     "defaultRoleLists":{
@@ -275,6 +276,29 @@
 
                 [null, null, "Jester"],
                 [null, null, "Witch"]
+            ],
+            [
+                [null, null, "Vampire"],
+                [null, null, "Vampire"],
+                [null, null, "Vampire"],
+                [null, null, "Vampire"],
+
+                [null, null, "Lookout"],
+                [null, null, "Lookout"],
+                [null, null, "Vigilante"],
+                [null, null, "Doctor"],
+
+                ["Town", "Protective", null],
+
+                ["Town", "Killing", null],
+                ["Town", "Killing", null],
+
+                ["Town", "Support", null],
+                ["Town", "Support", null],
+
+                [null, null, "Jester"],
+                [null, null, "Witch"],
+                ["Neutral", "Killing", null]
             ]
         ]
     }
