--- a/src/settings.json
+++ b/src/settings.json
@@ -1,4 +1,8 @@
 {
+    "defaultInvestigativeResults":{
+        "Default":[
+        ]
+    },
     "defaultPhaseTimes":{
         "Long":{
             "Night":90,
