Change to manifest and nothing else

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Mafia",
-  "name": "A game about deception and manipulation -Sammy",
+  "name": "A game about deception and manipulation",
   "icons": [
     {
       "src": "mafia_logo.ico",
