Fix tevin problems

--- a/src/settings.json
+++ b/src/settings.json
@@ -159,6 +159,7 @@
                 ["Town", "Killing", null],
                 ["Town", null, null],
                 ["Town", null, null],
+                [null, null, null],
                 
                 [null, null, "Witch"]
             ],
